css/styles.css
/* ... */
.text-primary {
    color: rgba(var(--bs-primary-rgb), 1) !important;
}

.text-muted {
    color: #6c757d !important;
}

.bg-primary {
    --bs-bg-opacity: 1;
    background-color: rgba(var(--bs-primary-rgb), var(--bs-bg-opacity)) !important;
}

.text-white-75 {
    color: rgba(255, 255, 255, 0.75) !important;
}

hr.divider {
    height: 1px;
    max-width: 5rem;
    margin: 1.5rem auto;
    background-color: var(--divider-colour);
    opacity: 1;
}

hr.divider-light {
    background-color: #fff;
}

hr.divider-dark {
    background-color: #000;
}

.nav-link {
    display: block;
    padding: 0.5rem 1rem;
    color: #f4623a;
    text-decoration: none;
    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
}
.nav-link:hover, .nav-link:focus {
    color: #c34e2e;
}
.navbar-brand {
    padding-top: 0.3125rem;
    padding-bottom: 0.3125rem;
    margin-right: 1rem;
}
.navbar-brand img {
    max-width: 100%;
    height: 1.5em;
    filter: brightness(3);
}
@media (max-width: 321px) {
    .navbar {
        padding-right: 0px!important;
        padding-left: 0px!important;
    }
}
@media (max-width: 421px) {
    #profile-image {
        padding: 1em!important;
    }
    .navbar-brand {
        max-width: 65%!important;
    }
}
.navbar-light .navbar-nav .nav-link {
    color: rgba(0, 0, 0, 0.55);
}
.navbar-light .navbar-toggler {
    color: rgba(0, 0, 0, 0.55);
    border-color: rgba(0, 0, 0, 0.1);
}
.navbar-light .navbar-toggler-icon {
    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%280, 0, 0, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
}
#mainNav {
    box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
    background-color: #fff;
    transition: background-color 0.2s ease;
}
#mainNav .navbar-brand {
    font-family: var(--bs-font-sans-serif);
    font-weight: 700;
    color: #212529;
}
#mainNav .navbar-nav .nav-item .nav-link {
    color: #6c757d;
    font-family: var(--bs-font-sans-serif);
    font-weight: 700;
    font-size: 0.9rem;
    padding: 0.75rem 0;
}
#mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
    color: #f4623a;
}
@media (min-width: 992px) {
    #mainNav {
        box-shadow: none;
        background-color: transparent;
    }
    #mainNav .navbar-brand {
        color: rgba(255, 255, 255, 0.7);
    }
    #mainNav .navbar-brand:hover {
        color: #fff;
    }
    #mainNav .navbar-nav .nav-item .nav-link {
        color: rgba(255, 255, 255, 0.7);
        padding: 0 1rem;
    }
    #mainNav .navbar-nav .nav-item .nav-link:hover {
        color: #fff;
    }
    #mainNav .navbar-nav .nav-item:last-child .nav-link {
        padding-right: 0;
    }
}
.navbar-brand {
    max-width: 50%;
    text-align: justify;
}
ul.navbar-nav li.nav-button {
    background-color: rgb(var(--btn-primary-colour));
    border-radius: 1em;
    padding-right: 1rem;
}

@media (max-width: 991.98px) {
    ul.navbar-nav li.nav-button{
        background-color: white !important;
    }
    #footerlogo {
        padding-bottom: 2rem;
    }
}

header.masthead h1 {
    font-size: 2.25rem;
    font-family: var(--bs-font-sans-serif);
}
@media (min-width: 992px) {
    header.masthead {
        height: 100vh;
        min-height: 40rem;
        padding-top: 4.5rem;
        padding-bottom: 0;
    }
    header.masthead p {
        font-size: 1.15rem;
    }
    header.masthead h1 {
        font-size: 3rem;
    }
}
@media (min-width: 1200px) {
    header.masthead h1 {
        font-size: 3.5rem;
    }
}

.whitebg {
    background-color: white;
}

.page-section .card {
    border: 0;
    border: 2 solid #000000;
    border-bottom: 2px solid #738171;
}

.vcimagewrapper {
    display: flex;
    align-items: center;
    flex-wrap: wrap;
}

#practice1 {
    background-image: linear-gradient(to bottom,  rgb(79 104 95 / 80%) 0%, rgb(86 73 67 / 80%) 100%), url('../assets/img/practice1sm.jpg');
}
#practice2 {
    background-image: linear-gradient(to bottom,  rgb(79 104 95 / 80%) 0%, rgb(86 73 67 / 80%) 100%), url('../assets/img/practice2sm.jpg');
}
.fill-image{
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-size: cover;
    min-height: 200px;
    border: solid white 1px;
    border-radius: 0.25rem;
}
.fill-image {
    display: grid;
    align-content: space-evenly;
}
@media (min-width: 349.98px){
    .fillbox.dt {
        width: 505px;
        width: -webkit-calc(100% - 2rem);
        width:    -moz-calc(100% - 2rem);
        width:         calc(100% - 2rem);
        height: 100%;
        position: absolute;
        top: 0;
        left: 1rem;
    }
    .hoverlay.dt {
        opacity: 1;
    }
    .hoverlay.dt + div {
        opacity: 0;
        pointer-events: none;
        padding-left: 3rem;
        padding-right: 3rem;
    }
    .hoverlay.dt:hover{
        opacity: 0;
    }
    .hoverlay.dt:hover + div{
        opacity: 1;
        background-color: rgba(255, 255, 255, .2);
    }
}

#footerlogo {
    width: 25rem;
    max-width: 80%;
}

#contact-card {
    max-width: 500px;
    margin-left: auto;
    margin-right: auto;
}

#mainNav.navbar-shrink {
    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
    background-color: #fff;
}
#mainNav.navbar-shrink .navbar-brand {
    color: #738171;
}
#mainNav.navbar-shrink .navbar-brand img {
    filter: brightness(1);
}
#mainNav.navbar-shrink .navbar-brand:hover {
    color: rgba(var(--bs-primary-rgb), .8);
}
#mainNav.navbar-shrink .navbar-nav .nav-item .nav-link {
    color: #738171;
}
#mainNav.navbar-shrink .navbar-nav .nav-item .nav-link:hover {
    color: rgba(var(--bs-primary-rgb), .6);
}
#mainNav.navbar-shrink .navbar-nav .nav-item.nav-button .nav-link {
    color: #ffffff;
}
#mainNav.navbar-shrink .navbar-nav .nav-item.nav-button .nav-link {
    color: #ffffff;
}
/* ... */

